# linux-syscall-tester

./: README.md  meson.build
src/: dispatch.c  dispatch.h  main.c  meson.build
src/syscalls/: invoke_close.c  invoke_dup.c  invoke_fcntl.c  invoke_link.c  invoke_linkat.c  invoke_mkdir.c  invoke_mkdirat.c  invoke_open.c  invoke_pread.c  invoke_pread64.c  invoke_preadv.c  invoke_pwrite64.c  invoke_pwritev.c  invoke_read.c  invoke_readv.c  invoke_rmdir.c  invoke_symlink.c  invoke_symlinkat.c  invoke_syscalls.h  invoke_unlink.c  invoke_unlinkat.c  invoke_write.c  invoke_writev.c
src/utils/: logger.c  logger.h
